mi segundo commit

--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1>holaaaa</h1>
+    <h1>hola xd*1</h1>
+    <h2>hola xd*2</h2>
+    <h3>hola xd*3</h3>
+    <h4>hola xd*4</h4>
+    <h5>hola xd*5</h5>
+    <h6>hola xd*6</h6>
 </body>
 </html>
